--- a/package.json
+++ b/package.json
@@ -50,11 +50,16 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
+    "typescript": "^4.2.4",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^12.1.1",
     "@commitlint/config-conventional": "^12.1.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
     "commitizen": "^4.2.3",
     "cz-customizable": "^6.3.0",
     "husky": "^6.0.0",
