--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@commitlint/config-conventional": "^12.1.1",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/react-modal": "^3.12.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "commitizen": "^4.2.3",
